# HEAXHub

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Makefile  PROJECT_PLAN.md  PROJECT_PLAN_v2.md  README.md  ai_automation_portal_easy.html  ai_automation_portal_standard.html  ai_automation_portal_standard.md  build-requirements.txt  heaxhub_stacks_showcase.html  install_autostart.sh  setup-on-server.sh  start-behind-portal.sh
backend/: celerybeat-schedule  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_favorites_and_tokens.py  0003_v2_infrastructure.py  0004_runtime_meta.py  0005_submission_source_config.py  0006_windows_agents_device_kind.py  0007_agent_refresh_tokens.py  0008_app_type_desktop_agent.py  0008_installer_packages_format.py  0009_install_reports.py  0009_seed_hwax_agent_app.py  0010_app_type_desktop_agent.py  0010_install_reports.py  0011_seed_hwax_agent_app.py
backend/app/: __init__.py  config.py  deps.py  main.py
backend/app/api/v1/: admin.py  agents.py  apps.py  auth.py  authz.py  change_requests.py  installers.py  jobs.py  launcher_agents.py  launcher_installers.py  mcp.py  portal_sso.py  router.py  submissions.py  users.py  webhooks.py  ws.py
backend/app/core/: __init__.py  errors.py  logger.py  rate_limit.py  security.py
backend/app/db/: base.py  session.py
backend/app/db/models/: __init__.py  agent_refresh_token.py  app.py  app_version.py  audit_log.py  change_request.py  gpu_device.py  gpu_holding.py  install_report.py  installer_package.py  job.py  license_holding.py  license_pool.py  permission.py  personal_access_token.py  port_allocation.py  refresh_token.py  secret_value.py  service_instance.py  submission.py  user.py  user_favorite.py  windows_agent.py
backend/app/runners/: __init__.py  apptainer_runner.py  base.py  external_link_runner.py  local_runner.py  registry.py  resource_hooks.py  resource_limits.py  slurm_runner.py  windows_agent_client.py
backend/app/schemas/: __init__.py  app.py  auth.py  change_request.py  common.py  job.py  submission.py
backend/app/services/: agent_manifest_builder.py  agent_registry.py  agent_service.py  app_lifecycle.py  apt_runner.py  assistant_packet.py  audit_service.py  auth_service.py  change_request.py  custom_protocol.py  github_integration.py  gpu_manager.py  installer_packages.py  instance_logging.py  integration_builder.py  integration_fetcher.py  integration_launcher.py  integration_sif_builder.py  integration_workspaces.py  integrations_scanner.py  interpreter_pool.py  job_orchestrator.py  license_manager.py  license_providers.py  llm_provider.py  mail_service.py  managed_workspaces.py  manifest_llm.py  manifest_validator.py  overlay_synthesizer.py  pat_service.py  permission_service.py  port_allocator.py  proxy_manager.py  secret_manager.py  service_manager.py  service_manager_dev.py  sif_registry.py  source_fetcher.py  stack_resolver.py  (+4 more)
backend/app/services/sif_templates/: cpp_executable.def  dash_plotly.def  dotnet_aspnet.def  fastapi.def  fastapi_react.def  flask.def  go_service.def  java_springboot.def  nextjs.def  nodejs_express.def  python_cli.def  r_script.def  rust_actix.def  shiny_for_python.def  streamlit.def
backend/app/tests/: __init__.py  test_admin_agent_observability.py  test_agent_manifest_builder.py  test_agent_registry.py  test_agent_service.py  test_api_smoke.py  test_apptainer_real_sif.py  test_apptainer_runner_real.py  test_apt_runner.py  test_assistant_packet.py  test_authz_gate.py  test_change_request.py  test_common_infra.py  test_cors.py  test_decode_token_audience.py  test_external_stacks.py  test_gpu_pool_real.py  test_heavy_stacks.py  test_inferrer_pipeline.py  test_installer_delete.py  test_installers_download.py  test_integration_builder_launcher.py  test_integration_fetcher.py  test_integrations_scanner.py  test_job_runner_extras.py  test_launcher_agents.py  test_launcher_download_stream.py  test_launcher_reports.py  test_launcher_security.py  test_launcher_sif.py  test_license_manager_precheck.py  test_license_providers.py  test_managed_workspaces.py  test_manifest_llm.py  test_multi_host_e2e.py  test_ops_tasks.py  test_overlay_synthesizer.py  test_pat.py  test_path_traversal.py  test_publish_route.py  (+14 more)
backend/app/tests/integration/: __init__.py  test_full_lifecycle.py
backend/app/workers/: build_tasks.py  celery_app.py  gpu_tasks.py  integration_tasks.py  job_tasks.py  ops_tasks.py  service_tasks.py  slurm_tasks.py  sync_tasks.py  webhook_tasks.py
backend/scripts/: __init__.py  create_admin.py  seed_streamlit_sample.py
integrations/heax-demo-cli/: .gitignore  README.md  pyproject.toml
integrations/heax-demo-cli/.portal/: manifest.yaml  run.sh
integrations/heax-demo-cli/src/heax_demo_cli/: __init__.py  cli.py
integrations/heax-demo-dash/: README.md  app.py  pyproject.toml
integrations/heax-demo-dash/.portal/: manifest.yaml
integrations/heax-demo-fastapi/: .gitignore  README.md  pyproject.toml
integrations/heax-demo-fastapi/.portal/: manifest.yaml
integrations/heax-demo-fastapi/app/: main.py
integrations/heax-demo-flask/: .gitignore  README.md  pyproject.toml
integrations/heax-demo-flask/.portal/: manifest.yaml
integrations/heax-demo-flask/app/: __init__.py  main.py
integrations/heax-demo-flask/templates/: base.html  echo.html  index.html
integrations/heax-demo-streamlit/: .gitignore  README.md  app.py  pyproject.toml
integrations/heax-demo-streamlit/.portal/: manifest.yaml
templates/cpp-cli/: .gitignore  CMakeLists.txt  README.md
templates/cpp-cli/.portal/: Apptainer.def  manifest.yaml  run.sh
templates/cpp-cli/src/: main.cpp
templates/fastapi-react/backend/: pyproject.toml
templates/python-cli/: .gitignore  README.md  pyproject.toml  requirements.txt
templates/python-cli/.portal/: manifest.yaml  params.schema.json  run.sh
templates/python-cli/src/mytool/: __init__.py  (+1 more)
templates/python-cli/tests/: test_smoke.py
templates/python-webapp/: .gitignore  README.md  pyproject.toml
templates/python-webapp/.portal/: manifest.yaml  run.sh
(+320 files in other folders)
