[project]
name = "heaxhub-backend"
version = "0.1.0"
description = "HEAXHub portal backend (FastAPI + Celery + PostgreSQL)"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "alembic>=1.13",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "passlib[argon2]>=1.7.4",
    "argon2-cffi>=23.1",
    "python-jose[cryptography]>=3.3",
    "python-multipart>=0.0.9",
    "celery>=5.3",
    "redis>=5.0",
    "jsonschema>=4.21",
    "pyyaml>=6.0",
    "gitpython>=3.1",
    "httpx>=0.26",
    "email-validator>=2.1",
    "PyGithub>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "mypy>=1.8",
    "types-pyyaml>=6.0",
    "testcontainers>=4.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = ["B008", "E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
disallow_untyped_decorators = false

[tool.pytest.ini_options]
testpaths = ["app/tests"]
asyncio_mode = "auto"
# Skip integration tests by default — opt in with `pytest -m integration`.
addopts = "-m 'not integration'"
markers = [
    "integration: tests that exercise real external dependencies (apptainer, redis, network)",
]
filterwarnings = [
    # passlib 1.7.4 (latest) reads argon2.__version__; argon2-cffi deprecated that path.
    # No newer passlib release available — silence until upstream fix.
    "ignore:Accessing argon2.__version__ is deprecated:DeprecationWarning:passlib.handlers.argon2",
]
