[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "heax-demo-streamlit"
version = "0.1.0"
description = "HEAXHub Streamlit 스택 데모 - NumPy 기반 간단 데이터 시각화 대시보드"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "HEAXHub Demo" },
]
keywords = ["heaxhub", "demo", "streamlit", "dashboard"]
dependencies = [
    "streamlit>=1.28",
    "numpy>=1.24",
    "pandas>=2.0",
]

[project.urls]
Homepage = "https://heaxhub.local/integrations/heax-demo-streamlit"

[tool.setuptools]
py-modules = ["app"]
